--- a/assets/titus.css
+++ b/assets/titus.css
@@ -7,6 +7,46 @@ html, body, #map {
     height: 100%;
 }
 
+.ifgi {
+    background-image: url(../img/ifgi.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.skateaid {
+    background-image: url(../img/skateaid.png);
+    background-position: center;
+    background-repeat: no-repeat;   
+}
+
+.info {
+    padding: 6px 8px;
+    font: 14px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+}
+
+.info h4 {
+    margin: 0 0 5px;
+    color: #777;
+}
+
+.legend {
+    text-align: left;
+    line-height: 18px;
+    color: #555;
+}
+
+.legend i {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+
 .lorem {
     font-style: italic;
     color: #AAA;
