--- a/assets/titus.css
+++ b/assets/titus.css
@@ -122,3 +122,18 @@ html, body, #map {
     vertical-align: top;
     border-top: 1px solid #dddddd;
 }
+
+.extent {
+    width: 10px;
+    height: 16px;
+    background: rgba(255,255,255,1);
+    background-image: url(../img/fullextent.png);
+    background-size: 16px 16px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.extent:hover {
+    background-color: #f4f4f4;
+
+}
